# dlpack-rs

./: .gitignore  Cargo.toml  Makefile.vim  README.md  build.rs  dlpack.rs
.github/workflows/: ci.yml
dlpack-sys/: Cargo.toml  build.rs
dlpack-sys/src/: bindings.rs  lib.rs
docs/: 2026-06-23-revive-portable-pyo3-plan.md  2026-06-23-revive-portable-pyo3-spec.md
src/: dlpack.rs  ffi.rs  lib.rs  pyo3_glue.rs  safe.rs
