[package]
name = "dlpack-rs"
description="Rust bindings for the DLPack protocol"
documentation="https://crates.io/crates/dlpack-rs"
homepage="https://crates.io/crates/dlpack-rs"
repository="https://github.com/kornia/dlpack-rs"
version = "0.1.1"
license="Apache-2.0"
edition = "2021"
build = "build.rs"


[build-dependencies]
bindgen = ">=0.60.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
