[package]
name = "dlpack-rs"
description = "Portable Rust bindings for the DLPack protocol (FFI + safe wrappers + optional pyo3 glue)"
repository = "https://github.com/kornia/dlpack-rs"
version = "0.2.0"
license = "Apache-2.0"
edition = "2021"

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.28", optional = true }
